# plasma-widget-tortoggle

./: CMakeLists.txt  Messages.sh  README
src/: CMakeLists.txt  org.kde.torcontrol.appdata.xml  torcontrol.cpp  torcontrol.h
src/package/: metadata.desktop
src/package/contents/config/: config.qml  main.xml
src/package/contents/ui/: FullRepresentation.qml  configGeneral.qml  main.qml
